--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -60,7 +60,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <div class="form-group">
+                                            <div class="form-group">         
                                                 <label for="form_password">Password *</label> <input type="password"
                                                                                                      id="form_password"
                                                                                                      name="password"
@@ -69,8 +69,8 @@
                                                                                                      required="required"
                                                                                                      data-error="Password muss einen Grossbuchstaben, einen Kleinbuchstaben, eine Zahl und ein Sonderzeichen haben. Es muss auch 8 Zeichen lang sein"
                                                                                                      th:field="*{password}"
-                                                                                                     minlength="8">
-                                                <!--pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$" -->
+                                                                                                     minlength="8"
+                                                                                                     pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$" >
                                                 <div class="help-block with-errors"></div>
                                             </div>
                                             <div id="myProgress">
