--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -46,6 +46,11 @@
                       </div>
                     </div>
                     <div class="row">
+                      <div class="col-md-6">
+                        <a th:href="@{/oauth2/authorization/google}"><img src="/img/google-logo.png" style="width: 50px; aspect-ratio: 1/1; margin-bottom: 15px"/></a>
+                      </div>
+                    </div>
+                    <div class="row">
                       <div class="col-md-12">
                         <input type="submit" class="btn btn-success btn-send" value="Log in">
                         <p></p>
